feat: add support for Mermaid diagrams in MDX

--- a/data/blog/2025/2025-01-02-childmdx.mdx
+++ b/data/blog/2025/2025-01-02-childmdx.mdx
@@ -7,12 +7,9 @@ draft: true
 tags: [markdown, github, gfm, mdx]
 ---
 
-{/_
-import {
-default as ChildMDX,
-frontmatter as childFrontmatter,
-} from "./child.mdx";
-_/}
+```tsx
+import { default as ChildMDX, frontmatter as childFrontmatter } from './child.mdx'
+```
 
 ## MDX Using file based routing
 
@@ -28,7 +25,6 @@ Just like you would do in a normal React component.
 
 ```tsx
 import HelloMDX from './hello-mdx'
-
 ;<HelloMDX />
 ```
 
