feat: increase max display posts and add new blog features

--- a/data/blog/2025/2024-01-01-gfm.mdx
+++ b/data/blog/2025/2024-01-01-gfm.mdx
@@ -1,7 +1,7 @@
 ---
 title: GitHub Flavored Markdown Guide
 date: 2024-01-01
-summary: "GitHub Flavored Markdown (GFM) extends standard Markdown with additional features. "
+summary: 'GitHub Flavored Markdown (GFM) extends standard Markdown with additional features. '
 authors: [Lucas]
 tags: [markdown, github, gfm, mdx]
 ---
@@ -13,22 +13,27 @@ GitHub Flavored Markdown (GFM) extends standard Markdown with additional feature
 ### Headers
 
 # H1 Header
+
 ## H2 Header
+
 ### H3 Header
 
 ### Emphasis
-*Italic text* or _italic text_
-**Bold text** or __bold text__
-***Bold and italic*** or ___bold and italic___
+
+_Italic text_ or _italic text_
+**Bold text** or **bold text**
+**_Bold and italic_** or **_bold and italic_**
 
 ### Lists
 
 Ordered List:
+
 1. First item
 2. Second item
 3. Third item
 
 Unordered List:
+
 - Item one
 - Item two
   - Nested item
@@ -36,12 +41,14 @@ Unordered List:
 - Item three
 
 ### Links and Images
+
 [Visit GitHub](https://github.com)
-![Alt text](/logo.svg)
+![Alt text](https://upload.wikimedia.org/wikipedia/commons/thumb/4/48/Markdown-mark.svg/350px-Markdown-mark.svg.png)
 
 ## GFM Special Features
 
 ### Task Lists
+
 - [x] Completed task
 - [ ] Incomplete task
 - [ ] Another task
@@ -49,32 +56,37 @@ Unordered List:
 ### Tables
 
 | Header 1 | Header 2 | Header 3 |
-|----------|----------|----------|
+| -------- | -------- | -------- |
 | Row 1    | Data     | Data     |
 | Row 2    | Data     | Data     |
 
 ### Code Blocks
+
 ```javascript
 function hello() {
-  console.log("Hello, World!");
+  console.log('Hello, World!')
 }
 ```
 
-
 ### Strikethrough
+
 ~~Strikethrough text~~
 
 ### Emoji
+
 :smile: :heart: :thumbsup:
 
 ### Mentions and References
+
 @username
 #issue_number
 
 ### Automatic Links
+
 http://example.com
 
 ### Footnotes
+
 Here's a sentence with a footnote[^1].
 
 [^1]: This is the footnote content.
@@ -82,13 +94,17 @@ Here's a sentence with a footnote[^1].
 ## Extended Formatting
 
 ### Blockquotes
+
 > This is a blockquote
+>
 > > Nested blockquote
 
 ### Horizontal Rule
+
 ---
 
 ### Escaping Characters
+
 \*Not italic\*
 \`Not code\`
 
@@ -96,7 +112,7 @@ Remember that GFM is compatible with standard Markdown while adding these extra 
 
 ### math
 
-This sentence uses `$` delimiters to show math inline: 
+This sentence uses `$` delimiters to show math inline:
 $$\sqrt{x-1}+(1+x)^2$$
 
 **The Cauchy-Schwarz Inequality**\
