docs: add GitHub Flavored Blockquotes section to documentation

--- a/data/blog/2025/2024-01-01-gfm.mdx
+++ b/data/blog/2025/2024-01-01-gfm.mdx
@@ -118,3 +118,27 @@ $$\sqrt{x-1}+(1+x)^2$$
 **The Cauchy-Schwarz Inequality**\
 
 $$\left( \sum_{k=1}^n a_k b_k \right)^2 \leq \left( \sum_{k=1}^n a_k^2 \right) \left( \sum_{k=1}^n b_k^2 \right)$$
+
+### Github Flavored Blockquotes with Alert
+
+> This is a default blockquote without any special styling.
+
+> [!NOTE]
+> Provides additional information or context about the topic.
+> Use this for general information that you want to highlight.
+
+> [!TIP]
+> Suggests a helpful way to use a feature or to accomplish a task.
+> Perfect for sharing best practices and useful suggestions.
+
+> [!IMPORTANT]
+> Crucial information necessary for users to succeed.
+> Use this for must-know information.
+
+> [!WARNING]
+> Warns users of potentially dangerous effects of an action.
+> Helps prevent user mistakes before they occur.
+
+> [!CAUTION]
+> Explains dangerous consequences of an action.
+> Use this for serious warnings about risky actions.
