--- a/data/blog/2025/2025-01-23-use-mdx.mdx
+++ b/data/blog/2025/2025-01-23-use-mdx.mdx
@@ -1,18 +1,22 @@
 ---
-title: Use MDX
+title: Using MDX in Next.js
 date: 2025-01-23
-summary: Use MDX in Next.js
+summary: Learn how to integrate and use MDX in a Next.js project.
 authors: [Lucas]
 tags: [markdown, github, gfm, mdx]
 ---
 
-## 1. 安装依赖
+<TOCInline toc={props.toc} toHeading={3} exclude="Introduction" />
+
+## Integration
+
+1. Install Dependencies
 
 ```bash
 pnpm add @next/mdx
 ```
 
-## 2. 配置 next.config.ts
+2. Configure `next.config.ts`
 
 ```ts
 const withMDX = createMDX({
@@ -22,7 +26,7 @@ const withMDX = createMDX({
 export default withMDX(nextConfig)
 ```
 
-## 3. 创建 mdx-components.tsx
+3. Create `mdx-components.tsx`
 
 ```tsx
 import type { MDXComponents } from 'mdx/types'
@@ -34,7 +38,7 @@ export function useMDXComponents(components: MDXComponents): MDXComponents {
 }
 ```
 
-## 4. 创建 mdx 文件
+4. Create an MDX File
 
 ```mdx
 # Hello World
@@ -42,11 +46,11 @@ export function useMDXComponents(components: MDXComponents): MDXComponents {
 This is a test.
 ```
 
-## 5. 创建 mdx 文件 with MDXComponents
+## Demo: Using Component in MDX
 
-在 mdx 文件中使用 MDXComponents
+Use MDXComponents within your MDX file:
 
-- 创建 React 组件
+- First, create a React component:
 
 ```tsx
 // hello-mdx.tsx
@@ -55,33 +59,137 @@ export default function HelloMDX() {
 }
 ```
 
-- 在 mdx 文件中使用
+- Then, use it inside an MDX file:
 
 ```mdx
-### Demo show HelloMDX
+### Demo: Show HelloMDX
 
 <HelloMDX />
 ```
 
-### Demo show HelloMDX
-
 <HelloMDX />
 
-### mdx 配置
+## Using JSX
 
-`mdx-components.tsx` 文件中定义的映射， 是在静态和动态编译时用到，如果使用 `MDXRemote` 组件， 则不生效了。
+```jsx
+<div className="mx-auto mb-5 max-w-md overflow-hidden rounded-xl bg-white shadow-md md:max-w-2xl">
+  <div className="md:flex">
+    <div className="md:shrink-0">
+      <img
+        className="h-48 w-full object-cover md:h-full md:w-48"
+        src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcR9SRRmhH4X5N2e4QalcoxVbzYsD44C-sQv-w&s"
+        alt="Modern building architecture"
+      />
+    </div>
+    <div className="p-8">
+      <div className="text-sm font-semibold uppercase tracking-wide text-indigo-500">
+        Company Retreats
+      </div>
+      <a
+        href="#"
+        className="mt-1 block text-lg font-medium leading-tight text-black hover:underline"
+      >
+        Incredible accommodation for your team
+      </a>
+      <div className="mt-2 text-gray-500">
+        Looking to take your team away on a retreat to enjoy awesome food and sunshine? We have a
+        list of places for just that.
+      </div>
+    </div>
+  </div>
+</div>
+```
 
-### mermaid
+<div className="mx-auto mb-5 max-w-md overflow-hidden rounded-xl bg-white shadow-md md:max-w-2xl">
+  <div className="md:flex">
+    <div className="md:shrink-0">
+      <img
+        className="h-48 w-full object-cover md:h-full md:w-48"
+        src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcR9SRRmhH4X5N2e4QalcoxVbzYsD44C-sQv-w&s"
+        alt="Modern building architecture"
+      />
+    </div>
+    <div className="p-8">
+      <div className="text-sm font-semibold uppercase tracking-wide text-indigo-500">
+        Company Retreats
+      </div>
+      <a
+        href="#"
+        className="mt-1 block text-lg font-medium leading-tight text-black hover:underline"
+      >
+        Incredible accommodation for your team
+      </a>
+      <div className="mt-2 text-gray-500">
+        Looking to take your team away on a retreat to enjoy awesome food and sunshine? We have a
+        list of places for just that.
+      </div>
+    </div>
+  </div>
+</div>
 
-Github supports mermaid code block as
+## Mermaid
 
-````markdown
-\```mermaid
+GitHub supports Mermaid code blocks as follows:
+
+````markdown showLineNumbers=false
+```mermaid
+
+```
 ````
 
-But mermaid in mdx needs playwright to build, which internally depends on chromium and can be a heavey dependency, so currently contentlayer has no good solution to support mermaid in mdx.
+However, Mermaid in MDX requires Playwright to build, which internally depends on Chromium, making it a heavy dependency. Currently, Contentlayer doesn’t offer an ideal solution for supporting Mermaid in MDX.
 
-See
+For more information, check out:
 
-- [mdx-mermaid](https://sjwall.github.io/mdx-mermaid/docs/intro/), which relies on puppeteer to render mermaid to svg.
+- [mdx-mermaid](https://sjwall.github.io/mdx-mermaid/docs/intro/), which uses Puppeteer to render Mermaid to SVG.
 - [mermaid.js](https://mermaid.js.org/intro/getting-started.html)
+
+---
+
+> [!NOTE]
+> Updated: I’ve created a React component to render Mermaid in MDX. See [Mermaid Support for MDX in Next.js](/blog/2025/2025-03-04-mermaid-mdx).
+
+## Import another MDX file
+
+> [!WARNING]
+> This is to be fixed. ContentLayer2 does not support ChildMDX file yet.
+
+We can directly import the MDX file as a React component. Next.js use [remark-mdx-frontmatter](https://github.com/remcohaszing/remark-mdx-frontmatter) as the plugin to extract the frontmatter metadata from the MDX file.
+
+Remember to add dependency to your `package.json` and add the plugin to `remarkPlugins` in `next.config.ts`.
+
+```tsx
+import { default as ChildMDX, frontmatter as childFrontmatter } from './child.mdx'
+```
+
+#### **childFrontmatter**
+
+This is the frontmatter metadata of the child page.
+
+```tsx
+  <pre className="relative p-6 rounded-xl overflow-hidden bg-slate-100">
+    {JSON.stringify(childFrontmatter, null, 2)}
+  </pre>
+
+  <p />
+
+  <div className="relative p-6 rounded-xl overflow-hidden bg-slate-100">
+    <ul className="list-inside list-disc space-y-2 pl-4">
+      {Object.keys(childFrontmatter).map((key) => (
+        <li className="text-gray-800 font-medium text-sm" key={key}>
+          <span className="font-bold">{key}:</span> {childFrontmatter[key]}
+        </li>
+      ))}
+    </ul>
+  </div>
+```
+
+#### **Child page content**
+
+```tsx
+<div className="relative overflow-hidden rounded-xl bg-slate-100 p-6">{/* <ChildMDX /> */}</div>
+```
+
+> [!NOTE]
+> The `remark-mdx-frontmatter` plugin, which is used to extract the frontmatter metadata from the MDX file, exports the metadata as `frontmatter`
+> but it may conflict with the `frontmatter` in the current page. So we rename it to `childFrontmatter` to avoid conflict.
