chore: update draft status in various blog posts

--- a/data/blog/2025/2025-02-28-contentlayer-mdx.mdx
+++ b/data/blog/2025/2025-02-28-contentlayer-mdx.mdx
@@ -4,6 +4,7 @@ date: 2025-02-28
 summary: 'ContentLayer is a static site generator that uses MDX and React components to build websites.'
 authors: [Lucas]
 tags: [contentlayer, mdx, react, static-site-generator]
+draft: false
 ---
 
 ## What is ContentLayer?
