--- a/data/blog/2025/2025-03-03-tailwindcss.mdx
+++ b/data/blog/2025/2025-03-03-tailwindcss.mdx
@@ -3,6 +3,7 @@ title: Understanding Tailwind CSS, PostCSS, and Modern Build Tools
 date: 2025-03-03
 summary: This post explores how Tailwind CSS processes styles at compile time, its relationship with PostCSS, and how modern bundlers manage dependencies efficiently.
 tags: [web, css, tailwindcss, postcss, webpack, vite]
+draft: false
 ---
 
 <TOCInline toc={props.toc} />
