--- a/data/blog/2025/2025-03-31-build-tool.mdx
+++ b/data/blog/2025/2025-03-31-build-tool.mdx
@@ -1,6 +1,10 @@
 ---
 title: Build Tool
 date: 2025-03-31
+authors: [Lucas]
+tags: [build-tool, unifiedjs, remark, rehype]
+summary: Learn about the build tool unifiedjs, remark, and rehype.
+draft: true
 ---
 
 ## unifiedjs
