--- a/data/blog/2025/2025-12-30-mdx-internal.mdx
+++ b/data/blog/2025/2025-12-30-mdx-internal.mdx
@@ -1,6 +1,10 @@
 ---
 title: MDX Internal
 date: 2025-12-30
+authors: [Lucas]
+tags: [mdx, internal]
+summary: MDX is a powerful tool for writing content in Next.js. This post explains the internal working of MDX.
+draft: true
 ---
 
 - Using MDX
