--- a/data/blog/template/new-features-in-v1.mdx
+++ b/data/blog/template/new-features-in-v1.mdx
@@ -3,7 +3,7 @@ title: 'New features in v1'
 date: 2021-08-07T15:32:14Z
 lastmod: '2021-02-01'
 tags: ['next-js', 'tailwind', 'guide', 'blog-template']
-draft: false
+draft: true
 summary: 'An overview of the new features released in v1 - code block copy, multiple authors, frontmatter layout and more'
 layout: PostSimple
 bibliography: references-data.bib
@@ -332,7 +332,7 @@ To modify the styles, change the following class selectors in the `prism.css` fi
 }
 
 .highlight-line {
-  @apply -mx-4 border-l-4 border-primary-500 bg-gray-700 bg-opacity-50;
+  @apply border-primary-500 -mx-4 border-l-4 bg-gray-700 bg-opacity-50;
 }
 
 .line-number::before {
