feat(authors): add Lucas Xu's author profile

--- a/data/blog/2025/2023-03-11-lec-generative-modeling.mdx
+++ b/data/blog/2025/2023-03-11-lec-generative-modeling.mdx
@@ -1,11 +1,23 @@
 ---
 title: '📝 Lecture Note: Generative Modeling'
 date: '2025-03-11'
-authors: [Lucas]
+authors: ['default']
 tags: [agents, ai, llm]
 summary: 'Lecture note for Generative Modeling: Concepts, Techniques, and Applications by Kaiming He'
 draft: false
 ---
+
+<div style={{ display: 'flex', justifyContent: 'center' }}>
+  <iframe
+    style={{ borderRadius: '12px' }}
+    src="https://open.spotify.com/embed/episode/00qLmhEcBBYHPRgKCJKm1U?utm_source=generator"
+    width="100%"
+    height="352"
+    frameBorder="0"
+    allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"
+    loading="lazy"
+  />
+</div>
 
 Lecture note for course [Generative Modeling](https://www.youtube.com/watch?v=2yJSoaGU2i4&t=17s) given by Kaiming He at MIT Schwarzman College of Computing Deep Learning Day
 
