feat(blog): add image field to blog document type

--- a/data/blog/2025/2025-01-13-nextjs-mdx.mdx
+++ b/data/blog/2025/2025-01-13-nextjs-mdx.mdx
@@ -2,7 +2,7 @@
 title: Build a documentation site with Next.js and MDX
 summary: This is a guide to build a documentation site with Next.js and MDX.
 date: 2025-01-13
-image: /og?title=Build a documentation site with Next.js and MDX
+images: ['/og?title=Build a documentation site with Next.js and MDX']
 authors: [Lucas]
 tags: [markdown, github, gfm, mdx]
 ---
