--- a/data/blog/2025/child.mdx
+++ b/data/blog/2025/child.mdx
@@ -2,7 +2,7 @@
 title: Child MDX file
 date: 2025-01-23
 summary: This is a child page mdx file
-image: https://picsum.photos/200/300
+images: ['https://picsum.photos/200/300']
 authors: [Lucas]
 tags: [markdown, github, gfm, mdx]
 draft: true
