--- a/data/blog/2025/sp25/2023-03-11-autonomous-agent.mdx
+++ b/data/blog/2025/sp25/2023-03-11-autonomous-agent.mdx
@@ -112,7 +112,14 @@ Adversarial Attack on multi-modal agents
 
 - **What is SoM representation?**
 
-<img src="https://github.com/microsoft/SoM/raw/main/assets/som_logo.png" alt="Logo" width="40" height="40" align="left" style="max-width: 100%;">
+<img
+  src="https://github.com/microsoft/SoM/raw/main/assets/som_logo.png"
+  alt="Logo"
+  width="40"
+  height="40"
+  align="left"
+  style="max-width: 100%;"
+/>
 [Set-of-Mark Visual Prompting for GPT-4V](https://github.com/microsoft/SoM)
 
 The paper was published in 2023 by Microsoft.
