feat(blog): add blog archive and stackblitz pages

--- a/data/blog/2025/mdx/2025-01-01-gfm.mdx
+++ b/data/blog/2025/mdx/2025-01-01-gfm.mdx
@@ -1,10 +1,12 @@
 ---
 title: GitHub Flavored Markdown Guide
-date: 2024-01-01
+date: 2025-01-01
 summary: 'GitHub Flavored Markdown (GFM) extends standard Markdown with additional features. '
 authors: [Lucas]
 tags: [markdown, github, gfm, mdx]
 ---
+
+<MdxSeriesNav currentPost={props.path} />
 
 GitHub Flavored Markdown (GFM) extends standard Markdown with additional features. Here are the key elements and examples:
 
