feat(blog): add new blog entries on browser agent and vibe coding

--- a/data/blog/2025/DRAFT/2025-03-18-mgx.mdx
+++ b/data/blog/2025/DRAFT/2025-03-18-mgx.mdx
@@ -4,6 +4,13 @@ date: '2025-03-18'
 ---
 
 - Manus
-- MetaGPT
-
-https://mgx.dev/
+- MetaGPT / MGX https://mgx.dev/
+- Replit Agent
+- OpenManus
+- OpenAI Operator
+- Cursor
+- Vercel v0.dev
+- Cloudflare AI Agent
+- Hugging Face Agent framework: smolagents
+- ag2
+- AllHands
