--- a/data/blog/2025/2025-03-27-vibe-coding.mdx
+++ b/data/blog/2025/2025-03-27-vibe-coding.mdx
@@ -164,3 +164,9 @@ _The Replit Agent interface showing the AI coding assistant in action_
 Front end and database in Replit
 
 ## Next steps and Best Practices
+
+## Vibe coding platforms
+
+<Tweet id="1898994802194346408" />
+
+replit, bolt, lovable, cursor, github copilot, openai codex, etc.
