feat(blog): add new post about Microsoft Build 2025

--- a/data/blog/2025/2025-04-16-full-text-search.mdx
+++ b/data/blog/2025/2025-04-16-full-text-search.mdx
@@ -2,7 +2,7 @@
 title: 'Full Text Search with PostgreSQL'
 summary: 'Learn how to use full text search with PostgreSQL to search for text in your database.'
 date: '2025-04-16'
-author: ['Lukas']
+authors: ['Lukas']
 tags: ['postgresql', 'gin', 'fts']
 draft: false
 ---
