--- a/data/blog/2025/2025-04-18-chatmcp-in-action.mdx
+++ b/data/blog/2025/2025-04-18-chatmcp-in-action.mdx
@@ -2,9 +2,8 @@
 title: MCP in action
 date: 2025-04-18
 tags: [mcp, chatgpt]
-description: MCP in action
 summary: MCP in action
-author: [Lukas]
+authors: [Lukas]
 draft: false
 ---
 
